<resources>
    <string name="app_name">cerita</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password_error_message">Password must be at least 8 characters</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="register">Register</string>
    <string name="dummyPict" />
    <string name="author">author</string>
    <string name="time_stamp">waktu</string>
    <string name="add">add</string>
    <string name="welcome_to_my_app">Selamat Datang Di
        CeritaKita</string>
    <string name="imageview" />
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="description">Masukkan Deskripsi Cerita Anda.....</string>
    <string name="logout">Logout</string>
    <string name="NoImg">Masukkan Gambar Terlebih Dahulu</string>
    <string name="story">cerita</string>
    <string name="retry">Retry</string>
    <string name="location">location</string>

</resources>